--- a/app/src/main/res/layout/activity_add_agent.xml
+++ b/app/src/main/res/layout/activity_add_agent.xml
@@ -104,7 +104,21 @@
                 android:id="@+id/spinnerAgencies"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp" />
+                android:layout_marginBottom="8dp" />
+
+            <TextView
+                android:id="@+id/lblPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Password:" />
+
+            <EditText
+                android:id="@+id/etPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:ems="10"
+                android:inputType="textPassword" />
 
             <TableLayout
                 android:layout_width="match_parent"
