--- a/app/src/main/res/layout/fragment_agent_edit.xml
+++ b/app/src/main/res/layout/fragment_agent_edit.xml
@@ -151,6 +151,20 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="#015E50" />
 
+            <TextView
+                android:id="@+id/lblPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="8dp"
+                android:text="Password:" />
+
+            <EditText
+                android:id="@+id/etPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPassword" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
