--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -2,39 +2,46 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/menu_home"
-        android:enabled="true"
-        android:icon="@drawable/ic_action_home"
-        android:title="Home"
-        android:visible="true"
-        app:showAsAction="always|withText" />
-    <item
-        android:id="@+id/menu_agents"
-        android:enabled="true"
-        android:icon="@drawable/ic_action_agents"
-        android:title="Agents"
-        android:visible="true"
-        app:showAsAction="always|withText" />
-    <item
-        android:id="@+id/menu_bookings"
-        android:enabled="true"
-        android:icon="@drawable/ic_action_booking"
-        android:title="Bookings"
-        android:visible="true"
-        app:showAsAction="always|withText" />
-    <item
-        android:id="@+id/menu_customers"
-        android:enabled="true"
-        android:icon="@drawable/ic_action_customer"
-        android:title="Customers"
-        android:visible="true"
-        app:showAsAction="always|withText" />
-    <item
-        android:id="@+id/menu_products"
-        android:enabled="true"
-        android:icon="@drawable/ic_action_product"
-        android:title="Products"
-        android:visible="true"
-        app:showAsAction="always|withText" />
+        <item
+            android:id="@+id/menu_home"
+            android:enabled="true"
+            android:icon="@drawable/ic_action_home"
+            android:title="Home"
+            android:visible="true"
+            app:showAsAction="always|withText" />
+        <item
+            android:id="@+id/menu_agents"
+            android:enabled="true"
+            android:icon="@drawable/ic_action_agents"
+            android:title="Agents"
+            android:visible="true"
+            app:showAsAction="always|withText" />
+        <item
+            android:id="@+id/menu_bookings"
+            android:enabled="true"
+            android:icon="@drawable/ic_action_booking"
+            android:title="Bookings"
+            android:visible="true"
+            app:showAsAction="always|withText" />
+        <item
+            android:id="@+id/menu_customers"
+            android:enabled="true"
+            android:icon="@drawable/ic_action_customer"
+            android:title="Customers"
+            android:visible="true"
+            app:showAsAction="always|withText" />
+        <item
+            android:id="@+id/menu_products"
+            android:enabled="true"
+            android:icon="@drawable/ic_action_product"
+            android:title="Products"
+            android:visible="true"
+            app:showAsAction="always|withText" />
+        <item
+            android:id="@+id/menu_logout"
+            android:enabled="true"
+            android:icon="@drawable/ic_action_logout"
+            android:title="Logout"
+            android:visible="true" />
+
 </menu>
