--- a/app/src/main/res/layout/activity_supplier_detail.xml
+++ b/app/src/main/res/layout/activity_supplier_detail.xml
@@ -77,7 +77,7 @@
                 android:id="@+id/textView63"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Address ;"
+                android:text="Address :"
                 android:textSize="18sp" />
 
             <TextView
@@ -126,7 +126,7 @@
                 android:id="@+id/textView72"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Email ;"
+                android:text="Email :"
                 android:textSize="18sp" />
 
             <TextView
@@ -162,6 +162,12 @@
                 android:layout_height="wrap_content"
                 android:textSize="30sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView80"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="27sp" />
 
             <TextView
                 android:id="@+id/tvSupplierId"
