--- a/app/src/main/res/layout/activity_customer_edit.xml
+++ b/app/src/main/res/layout/activity_customer_edit.xml
@@ -149,7 +149,7 @@
                     android:text="Buisness Phone :" />
 
                 <EditText
-                    android:id="@+id/etBusPhone"
+                    android:id="@+id/etCustBusPhone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -165,17 +165,16 @@
                     android:id="@+id/etCustEmail"
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
-                    android:ems="10"
                     android:inputType="textPersonName" />
 
                 <TextView
                     android:id="@+id/textView22"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Agency :" />
+                    android:text="Agent :" />
 
                 <EditText
-                    android:id="@+id/etAgency"
+                    android:id="@+id/etAgentIdCust"
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:ems="10"
