--- a/app/src/main/res/layout/activity_supplier_detail.xml
+++ b/app/src/main/res/layout/activity_supplier_detail.xml
@@ -258,20 +258,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp" />
+
         </LinearLayout>
     </LinearLayout>
 
     <Button
-        android:id="@+id/btnUpdateSupplier"
-        android:layout_width="wrap_content"
+        android:id="@+id/btnUpdateSup"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="144dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="179dp"
-        android:layout_marginBottom="33dp"
-        android:text="Update Supplier"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+        android:text="Update"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="650dp" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
