--- a/app/src/main/res/layout/activity_supplier_detail.xml
+++ b/app/src/main/res/layout/activity_supplier_detail.xml
@@ -266,9 +266,13 @@
         android:id="@+id/btnUpdateSup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:text="Update"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="650dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
